styles.css
/* Set a background color to the 'body' element */
body { 
    background-color: #fffff0;
    /*ece4cd*/
    padding-top: 10%;
}
    
.footer-links {
    color: #999;
    text-align: center;
    margin: 1rem;
}
  
.footer-links a {
    color: #999;
    padding: 15px;
    text-decoration: none;
}

.footer-links a:hover {
    color: #333;
}
  
.bio {
    width: 100%;
    max-width: 700px;
    padding: 15px;
    margin: auto;
}

.pic {
    border:3px solid Gainsboro;;
}

